<resources>
    <string name="app_name">Lab4</string>
    <string name="textViewUrl">Address</string>
<!--    <string name="exampleResourceUrl">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>-->
<!--    <string name="exampleResourceUrl">https://filesamples.com/samples/video/avi/sample_960x400_ocean_with_audio.avi</string>-->
    <string name="exampleResourceUrl">https://cs.pollub.pl/wp-content/uploads/2020/09/REGULAMIN-Platformy-e-learningowej-Wydzia%C5%82u-Elektrotechniki-i-Informatyki-Politechniki-Lubelskiej.pdf</string>
    <string name="buttonReceiveInformation">RECEIVE INFORMATION</string>
    <string name="textViewFileSize">File size:</string>
    <string name="textViewFileType">File type:</string>
    <string name="_0">0</string>
    <string name="buttonDownloadFile">DOWNLOAD FILE</string>
    <string name="textViewBytesDownloaded">Bytes downloaded:</string>
    <string name="fileDownloadedBytesValue">File downloaded</string>
    <string name="askForWriteExternalStoragePermissionMessage">You should click the permission dude</string>
    <string name="fileHasBeenDownloadedMessage">File has been successfully downloaded</string>
</resources>